--- a/exercise/index.html
+++ b/exercise/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Vending Machine</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
     <script src="./services/service.js" type="text/javascript"></script>
@@ -24,13 +24,13 @@
                             <div class="col-md-8 row" id="product-menu">
                             </div>
                             <div class="col-md-4">
-                                <h3>Coins</h3>
+                                <h3>Your Money</h3>
                                 <input type="number" class="form-control" id="inp-coin" readonly>
                                 <br>
                                 <button type="button" class="btn btn-secondary btn-block" id="btn-cancel">Cancel</button>
 
                                 <hr>
-                                <h3>Return Coins</h3>
+                                <h3>Return Your Money</h3>
                                 <ul id="return-coin" class="list-group"></ul>
                                 <button type="button" class="btn btn-warning btn-block" id="btn-recieve-coin">Recieve Coins</button>
                                 <hr>
@@ -50,6 +50,13 @@
                 <button type="button" class="btn btn-primary btn-block" id="two-coin">2</button>
                 <button type="button" class="btn btn-primary btn-block" id="five-coin">5</button>
                 <button type="button" class="btn btn-primary btn-block" id="ten-coin">10</button>
+
+                <br>
+                <h3>Select Banknotes</h3>
+                <button type="button" class="btn btn-success btn-block" id="twenty-banknotes">20</button>
+                <button type="button" class="btn btn-success btn-block" id="fifty-banknotes">50</button>
+                <button type="button" class="btn btn-success btn-block" id="onehundred-banknotes">100</button>
+
             </div>
         </div>
     </div>
